# qmdec

./: .gitignore  README.md  pyproject.toml
src/qmdec/: album.py  auth.py  cli.py  download.py  fast_decrypt.py
src/qmdec/csrc/: qmc2_fast.c
