[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmdec"
version = "0.2.0"
description = "QQ Music decryptor with C-accelerated QMC2, batch album download, full metadata + lyrics"
requires-python = ">=3.10"
dependencies = ["music-tag>=0.4.3", "Pillow>=9.0"]

[project.scripts]
qmdec = "qmdec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qmdec"]
